fix: align home icon with title

--- a/z-energy-frontend/src/pages/PriceComparison/PriceComparison.module.css
+++ b/z-energy-frontend/src/pages/PriceComparison/PriceComparison.module.css
@@ -24,6 +24,7 @@
 
 .homeLink {
   position: absolute;
+  top: 25px;
   left: 15px;
   transition: transform 400ms ease-in;
 }
